--- a/index.html
+++ b/index.html
@@ -4,31 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      href="https://cdn.bootcss.com/font-awesome/5.11.2/css/all.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>社交按钮分享hover发光特效</title>
+    <title>HTML and CSS Examples</title>
   </head>
   <body>
     <main>
       <ul>
-        <li>
-          <a href=""><img src="bilibili.svg" alt="" class="svg-icon"/></a>
-        </li>
-        <li>
-          <a href=""><i class="fab fa-weixin"></i></a>
-        </li>
-        <li>
-          <a href=""><i class="fab fa-weibo"></i></a>
-        </li>
-        <li>
-          <a href=""><i class="fab fa-github"></i></a>
-        </li>
-        <li>
-          <a href=""><i class="fab fa-linkedin"></i></a>
-        </li>
+        <li><a href="social-icon-hover-glow-effect"></a></li>
       </ul>
     </main>
   </body>
