update example link

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <body>
     <main>
       <ul>
-        <li><a href="social-icon-hover-glow-effect"></a></li>
+        <li>
+          <a href="social-icon-hover-glow-effect">社交图标Hover发光特效</a>
+        </li>
       </ul>
     </main>
   </body>
