Organized source code

--- a/index.html
+++ b/index.html
@@ -4,15 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
     <title>HTML and CSS Examples</title>
   </head>
   <body>
     <main>
-      <ul>
-        <li>
-          <a href="social-icon-hover-glow-effect">社交图标Hover发光特效</a>
-        </li>
-      </ul>
+      <div class="card">
+        <ul>
+          <li>
+            <a href="social-icon-hover-glow-effect">社交图标Hover发光特效</a>
+          </li>
+          <li>
+            <a href="login-form-glass-effect">登录表单玻璃特效</a>
+          </li>
+          <li>
+            <a href="chatting-ui">移动聊天UI实现</a>
+          </li>
+          <li>
+            <a href="svg-text-drawing-effect">文本绘制及渐变特效</a>
+          </li>
+          <li>
+            <a href="button-hover-border-drawing-effect"
+              >按钮Hover边框绘制特效</a
+            >
+          </li>
+          <li>
+            <a href="libra-ui-concept/">Libra概念UI设计实现</a>
+          </li>
+        </ul>
+      </div>
     </main>
   </body>
 </html>
