--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
           </li>
         </ul>
       </div>
+      <div class="card">
+        <ul>
+          <li>
+            <a href="3d-cubic-images">3D立方体照片墙</a>
+          </li>
+          <li>
+            <a href="parallax-scrolling">纯CSS页面视差滚动特效</a>
+          </li>
+        </ul>
+      </div>
     </main>
   </body>
 </html>
