--- a/index.html
+++ b/index.html
@@ -41,6 +41,18 @@
           <li>
             <a href="parallax-scrolling">纯CSS页面视差滚动特效</a>
           </li>
+          <li>
+            <a href="japanese-pronunciation">CSS翻转特效制作五十音图</a>
+          </li>
+          <li>
+            <a href="navigation-bar">4种不同的导航高亮指示</a>
+          </li>
+          <li>
+            <a href="canvas-bar-chart">原生Canvas实现柱状图</a>
+          </li>
+          <li>
+            <a href="skill-progress-bar">CSS技能进度条表现效果</a>
+          </li>
         </ul>
       </div>
     </main>
