--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
           </li>
         </ul>
       </div>
+      <div class="card">
+        <ul>
+          <li>
+            <a href="14-image-slider">图片轮播组件</a>
+          </li>
+        </ul>
+      </div>
     </main>
   </body>
 </html>
