--- a/17-upload-button/index.html
+++ b/17-upload-button/index.html
@@ -13,7 +13,6 @@
         <svg class="arrow" width="40" height="40" viewBox="0 0 40 40">
           <!-- 进度 -->
           <circle
-            class="circle"
             cx="50%"
             cy="50%"
             r="19"
@@ -33,7 +32,7 @@
             class="arrow-top"
           ></polyline>
           <polyline
-            points="8,20 18,30 30, 12"
+            points="8,20 18,30 30,12"
             stroke="#ffffff"
             fill="none"
             stroke-width="2"
