--- a/22-face-reco-mask/index.html
+++ b/22-face-reco-mask/index.html
@@ -9,7 +9,7 @@
   <body>
     <!-- <canvas id="overlay"></canvas> -->
     <!-- 人物照片，正面端正 -->
-    <img id="image" src="man.jpg" alt="" />
+    <img id="image" src="woman.jpg" alt="" />
     <!-- 口罩svg图片 -->
     <img id="mask" src="mask.svg" />
     <div class="loading"><img src="mask.svg" />识别中...</div>
