--- a/index.html
+++ b/index.html
@@ -12,84 +12,84 @@
       <div class="card">
         <ul>
           <li>
-            <a href="/social-icon-hover-glow-effect">社交图标Hover发光特效</a>
+            <a href="social-icon-hover-glow-effect">社交图标Hover发光特效</a>
           </li>
           <li>
-            <a href="/login-form-glass-effect">登录表单玻璃特效</a>
+            <a href="login-form-glass-effect">登录表单玻璃特效</a>
           </li>
           <li>
-            <a href="/chatting-ui">移动聊天UI实现</a>
+            <a href="chatting-ui">移动聊天UI实现</a>
           </li>
           <li>
-            <a href="/svg-text-drawing-effect">文本绘制及渐变特效</a>
+            <a href="svg-text-drawing-effect">文本绘制及渐变特效</a>
           </li>
           <li>
-            <a href="/button-hover-border-drawing-effect"
+            <a href="button-hover-border-drawing-effect"
               >按钮Hover边框绘制特效</a
             >
           </li>
           <li>
-            <a href="/libra-ui-concept/">Libra概念UI设计实现</a>
+            <a href="libra-ui-concept/">Libra概念UI设计实现</a>
           </li>
         </ul>
       </div>
       <div class="card">
         <ul>
           <li>
-            <a href="/3d-cubic-images">3D立方体照片墙</a>
+            <a href="3d-cubic-images">3D立方体照片墙</a>
           </li>
           <li>
-            <a href="/parallax-scrolling">纯CSS页面视差滚动特效</a>
+            <a href="parallax-scrolling">纯CSS页面视差滚动特效</a>
           </li>
           <li>
-            <a href="/japanese-pronunciation">CSS翻转特效制作五十音图</a>
+            <a href="japanese-pronunciation">CSS翻转特效制作五十音图</a>
           </li>
           <li>
-            <a href="/navigation-bar">4种不同的导航高亮指示</a>
+            <a href="navigation-bar">4种不同的导航高亮指示</a>
           </li>
           <li>
-            <a href="/canvas-bar-chart">原生Canvas实现柱状图</a>
+            <a href="canvas-bar-chart">原生Canvas实现柱状图</a>
           </li>
           <li>
-            <a href="/skill-progress-bar">CSS技能进度条表现效果</a>
-          </li>
-        </ul>
-      </div>
-      <div class="card">
-        <ul>
-          <li>
-            <a href="/14-image-slider">图片轮播组件</a>
-          </li>
-          <li>
-            <a href="/15-responsive-navbar/">响应式全屏导航</a>
-          </li>
-          <li>
-            <a href="/16-svg-animation-truck/">SVG工厂动画</a>
-          </li>
-          <li>
-            <a href="/17-upload-button/">动画上传按钮</a>
-          </li>
-          <li>
-            <a href="/18-elsa-magic-effect/">冰雪奇缘魔法特效</a>
-          </li>
-          <li>
-            <a href="/19-profile-card/">个人资料卡页面</a>
+            <a href="skill-progress-bar">CSS技能进度条表现效果</a>
           </li>
         </ul>
       </div>
       <div class="card">
         <ul>
           <li>
-            <a href="/20-typewritter-effect/">打字机效果</a>
+            <a href="14-image-slider">图片轮播组件</a>
           </li>
           <li>
-            <a href="/21-range-slider/">滑动选择器美化</a>
+            <a href="15-responsive-navbar/">响应式全屏导航</a>
           </li>
           <li>
-            <a href="/22-face-reco-mask/">人脸识别戴口罩</a>
+            <a href="16-svg-animation-truck/">SVG工厂动画</a>
           </li>
           <li>
-            <a href="/23-fullwebsite-design-agency/">整站-科技公司首页</a>
+            <a href="17-upload-button/">动画上传按钮</a>
+          </li>
+          <li>
+            <a href="18-elsa-magic-effect/">冰雪奇缘魔法特效</a>
+          </li>
+          <li>
+            <a href="19-profile-card/">个人资料卡页面</a>
+          </li>
+        </ul>
+      </div>
+      <div class="card">
+        <ul>
+          <li>
+            <a href="20-typewritter-effect/">打字机效果</a>
+          </li>
+          <li>
+            <a href="21-range-slider/">滑动选择器美化</a>
+          </li>
+          <li>
+            <a href="22-face-reco-mask/">人脸识别戴口罩</a>
+          </li>
+          <li>
+            <a href="23-fullwebsite-design-agency/">整站-科技公司首页</a>
           </li>
         </ul>
       </div>
