--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
           <li>
             <a href="23-fullwebsite-design-agency/">整站-科技公司首页</a>
           </li>
+          <li>
+            <a href="24-fetch-get-data/">使用 fetch 加载远程数据</a>
+          </li>
         </ul>
       </div>
     </main>
