Updating typewriter effect
added one more option

--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
           <li>
             <a href="20-typewritter-effect/">打字机效果</a>
           </li>
+           <li>
+            <a href="20.2-typewritter-effect2/">打字机效果2</a>
+          </li>
           <li>
             <a href="21-range-slider/">滑动选择器美化</a>
           </li>
