add a new example

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   </head>
   <body>
     <main>
-      <div class="card">
-        <ul>
+      <div class="container">
+        <h1>HTML CSS 特效</h1>
+        <ul class="list">
           <li>
             <a href="01-social-icon-hover-glow-effect">社交图标Hover发光特效</a>
           </li>
@@ -31,10 +32,6 @@
           <li>
             <a href="06-libra-ui-concept/">Libra概念UI设计实现</a>
           </li>
-        </ul>
-      </div>
-      <div class="card">
-        <ul>
           <li>
             <a href="07-3d-cubic-images">3D立方体照片墙</a>
           </li>
@@ -53,10 +50,6 @@
           <li>
             <a href="12-skill-progress-bar">CSS技能进度条表现效果</a>
           </li>
-        </ul>
-      </div>
-      <div class="card">
-        <ul>
           <li>
             <a href="14-image-slider">图片轮播组件</a>
           </li>
@@ -75,10 +68,6 @@
           <li>
             <a href="19-profile-card/">个人资料卡页面</a>
           </li>
-        </ul>
-      </div>
-      <div class="card">
-        <ul>
           <li>
             <a href="20-typewritter-effect/">打字机效果</a>
           </li>
@@ -95,8 +84,11 @@
             <a href="24-fetch-get-data/">使用 fetch 加载远程数据</a>
           </li>
           <li>
-            <a href="25-neumorphism-tabs/"
-              >新拟态选项卡<span style="color: #74f174">（NEW!）</span></a
+            <a href="25-neumorphism-tabs/">新拟态选项卡</a>
+          </li>
+          <li>
+            <a href="26-glassmorphism/"
+              >玻璃态特效<span style="color: #74f174">（NEW!）</span></a
             >
           </li>
         </ul>
