--- a/index.html
+++ b/index.html
@@ -11,88 +11,11 @@
     <main>
       <div class="container">
         <h1>HTML CSS 特效</h1>
-        <ul class="list">
-          <li>
-            <a href="01-social-icon-hover-glow-effect">社交图标Hover发光特效</a>
-          </li>
-          <li>
-            <a href="02-login-form-glass-effect">登录表单玻璃特效</a>
-          </li>
-          <li>
-            <a href="03-chatting-ui">移动聊天UI实现</a>
-          </li>
-          <li>
-            <a href="04-svg-text-drawing-effect">文本绘制及渐变特效</a>
-          </li>
-          <li>
-            <a href="05-button-hover-border-drawing-effect"
-              >按钮Hover边框绘制特效</a
-            >
-          </li>
-          <li>
-            <a href="06-libra-ui-concept/">Libra概念UI设计实现</a>
-          </li>
-          <li>
-            <a href="07-3d-cubic-images">3D立方体照片墙</a>
-          </li>
-          <li>
-            <a href="08-parallax-scrolling">纯CSS页面视差滚动特效</a>
-          </li>
-          <li>
-            <a href="09-japanese-pronunciation">CSS翻转特效制作五十音图</a>
-          </li>
-          <li>
-            <a href="10-navigation-bar">4种不同的导航高亮指示</a>
-          </li>
-          <li>
-            <a href="11-canvas-bar-chart">原生Canvas实现柱状图</a>
-          </li>
-          <li>
-            <a href="12-skill-progress-bar">CSS技能进度条表现效果</a>
-          </li>
-          <li>
-            <a href="14-image-slider">图片轮播组件</a>
-          </li>
-          <li>
-            <a href="15-responsive-navbar/">响应式全屏导航</a>
-          </li>
-          <li>
-            <a href="16-svg-animation-truck/">SVG工厂动画</a>
-          </li>
-          <li>
-            <a href="17-upload-button/">动画上传按钮</a>
-          </li>
-          <li>
-            <a href="18-elsa-magic-effect/">冰雪奇缘魔法特效</a>
-          </li>
-          <li>
-            <a href="19-profile-card/">个人资料卡页面</a>
-          </li>
-          <li>
-            <a href="20-typewritter-effect/">打字机效果</a>
-          </li>
-          <li>
-            <a href="21-range-slider/">滑动选择器美化</a>
-          </li>
-          <li>
-            <a href="22-face-reco-mask/">人脸识别戴口罩</a>
-          </li>
-          <li>
-            <a href="23-fullwebsite-design-agency/">整站-科技公司首页</a>
-          </li>
-          <li>
-            <a href="24-fetch-get-data/">使用 fetch 加载远程数据</a>
-          </li>
-          <li>
-            <a href="25-neumorphism-tabs/">新拟态选项卡</a>
-          </li>
-          <li>
-            <a href="26-glassmorphism/"
-              >玻璃态特效<span style="color: #74f174">（NEW!）</span></a
-            >
-          </li>
-        </ul>
+        <ul class="list"></ul>
       </div>
     </main>
+    <script src="react.js"></script>
+    <script src="react-dom.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
