--- a/26-glassmorphism/index.html
+++ b/26-glassmorphism/index.html
@@ -26,6 +26,7 @@
         width: 50vw;
         height: 50vh;
         backdrop-filter: blur(8px);
+        -webkit-backdrop-filter: blur(8px);
         background-color: rgba(255, 255, 255, 0.25);
         box-shadow: 0 8px 32px 0 rgba(27, 0, 37, 0.89);
         border-radius: 10px;
