Add new examples

--- a/36-tech-website/index.html
+++ b/36-tech-website/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <header>
-        <img src="./assets/images/logo.svg" alt="" class="logo" />
+        <img src="./assets/images/logo.svg" alt="" />
         <nav>
           <a>首页</a>
           <a>产品</a>
@@ -37,7 +37,6 @@
           <img src="./assets/images/email.svg" alt="email" />
           <img src="./assets/images/bilibili.svg" alt="bilibili" />
         </div>
-        <div class="line"></div>
       </footer>
     </div>
   </body>
