--- a/55-beautiful-table/index.html
+++ b/55-beautiful-table/index.html
@@ -97,17 +97,17 @@
       }
 
       .status.member {
-        background-color: rgba(224, 224, 224, 0.8);
+        background-color: rgb(224, 224, 224);
         color: #555;
       }
 
       .status.signed-up {
-        background-color: rgba(255, 193, 7, 0.8);
+        background-color: rgb(255, 208, 0);
         color: #ffffff;
       }
 
       .status.new-customer {
-        background-color: rgba(40, 167, 69, 0.8);
+        background-color: rgb(1, 187, 45);
         color: #ffffff;
       }
 
@@ -136,51 +136,42 @@
           <tbody>
             <tr>
               <td class="customer-info">
-                <img
-                  src="https://via.placeholder.com/40"
-                  alt="Customer Image"
-                />
+                <img src="https://placehold.co/40" alt="Customer Image" />
                 <div>
                   <strong>王伟</strong>
-                  <p>ronaldrcs@mail.com</p>
+                  <p>wangwei@mail.com</p>
                 </div>
               </td>
               <td><span class="status member">会员</span></td>
               <td>#74568320</td>
               <td>5分钟前</td>
-              <td class="amount">$12,408.20</td>
+              <td class="amount">￥12,408.20</td>
             </tr>
             <tr>
               <td class="customer-info">
-                <img
-                  src="https://via.placeholder.com/40"
-                  alt="Customer Image"
-                />
+                <img src="https://placehold.co/40" alt="Customer Image" />
                 <div>
                   <strong>李娜</strong>
-                  <p>steward.darelll@mail.com</p>
+                  <p>lina@mail.com</p>
                 </div>
               </td>
               <td><span class="status signed-up">已注册</span></td>
               <td>#23134855</td>
               <td>10分钟前</td>
-              <td class="amount">$201.50</td>
+              <td class="amount">￥201.50</td>
             </tr>
             <tr>
               <td class="customer-info">
-                <img
-                  src="https://via.placeholder.com/40"
-                  alt="Customer Image"
-                />
+                <img src="https://placehold.co/40" alt="Customer Image" />
                 <div>
                   <strong>张强</strong>
-                  <p>mckinney.jr@mail.com</p>
+                  <p>zhangqiang@mail.com</p>
                 </div>
               </td>
               <td><span class="status new-customer">新客户</span></td>
               <td>#54394837</td>
               <td>15分钟前</td>
-              <td class="amount">$2,856.03</td>
+              <td class="amount">￥2,856.03</td>
             </tr>
           </tbody>
         </table>
